# jni_practice

./: LICENSE  README.md
Calculation/: CMakeLists.txt
Calculation/Calculation/: CMakeLists.txt  Food.h  com_hy_report_api_Food.cpp  com_hy_report_api_Food.h
CalculationBackendService/src/com/hy/report/api/: Food.java
